src/assetbundles/src/css/Translations.css
/* ... */
#translations-field .translations-dropdown {
    float: right;
    margin: 0px 0px 0px 0px;
}

.translations-icon svg {
    display: flex;
    height: auto;
    margin-right: 12px;
    width: 16px;
}

.translations-icon svg path {
    fill: #8f98a3;
}

.settings-sel {
    background: #fff;
}

.settings-sel .translations-icon svg path {
    fill: #b9bfc6 !important;
}

.sidebar nav li a.settings-sel {
    background: #737f8c !important;
    color: #fff !important;
}

#trial-notice .link {
    display: inline-block;
    padding: 0 10px ;
}

.translations-about .link {
    padding-bottom: 15px;
}

.translations-about .link a {
    padding-right: 15px;
}

.static-trans-footer .pagination {
    display: none;
}

.footer-order-navigation{
    background-color: #f3f7fc;
    border-radius: 0 0 5px 5px;
    display: flex;
    justify-content: space-between;
    margin: 0px -24px -24px -24px;
    padding: 10px 24px;
}

.top-order-navigation{
    background-color: #f3f7fc;
    border-radius: 5px 5px 0 0;
    display: flex;
    justify-content: space-between;
    margin: -24px -24px 20px -24px;
    padding: 10px 24px;
}

.top-order-navigation span,
.footer-order-navigation span{
    margin: 0px 10px;
}

.footer-order-navigation a,
.top-order-navigation a{
    color: #606d7b;
    transition: color linear 100ms;
}

.footer-order-navigation a:hover,
.top-order-navigation a:hover{
    color: #0B69A3;
}

/* CSS Used in Order Create and Details page */

.publish-row {
    background-color: lightgray;
    height: 3em;
    padding: 10px;
}

.close-publish-modal {
    font-size: 20px;
}

.float-right {
    float: right !important;
}

.pl-10 {
    padding-left: 10px;
}

.pl-100 {
    padding-left: 100px;
}

.pr-10px {
    padding-right: 10px;
}

.pl-5 {
    padding-left: 5px;
}

.pt-10 {
    padding-top: 10px !important;
}

.pt-5 {
    padding-top: 5px !important;
}

.w-300 {
    width: 300px;
}

.w-100 {
    width: 100% !important;
}

.fw-400 {
    font-weight: 400;
}

.ml-auto {
    margin-left: auto;
}

.mr-auto {
    margin-right: auto !important;
}

.h-6 {
    height: 6em;
}

.h-10 {
    height: 10em;
}

.h-8 {
    height: 8em;
}

.h-7 {
    height: 7em;
}

.pr-10 {
    padding-right: 10em;
}

.mb-1 {
    margin-bottom: 1em;
}

.p-0 {
    padding: 0 !important;
}

.df {
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.wd-65 {
    width: 65%;
}

td.pdl-30 {
    padding-left: 30px !important;
}

tr.total > th {
    border-top: 1px solid black !important;
    border-bottom: 1px solid black;
}

tr.bold > td {
    font-weight: 500;
}

tr.bold:hover > td {
    background-color: unset !important;
}

#approve-publish-form .footer,
.modal .resizehandle {
    z-index: 9;
}

.footer .select-all-checkbox {
    float: left;
}

.scroll-x-auto {
    overflow-x: auto;
    align-items: center;
}

td .elements .element, td .elements .element.sel:focus {
    background-color: inherit !important;
    cursor: pointer;
}

td .elements .element .label {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

tr.clone-modal-tr:not(.disabled):hover tr.file-diff-data th,
tr.clone-modal-tr:not(.disabled):hover tr.file-diff-data td {
    background-color: white !important;
}

.clone-modal-tr {
    box-shadow: rgb(205, 216, 228) 0px 0px 0px 1px, rgba(205, 216, 228, 0.5) 0px 2px 12px;
    border-radius: 5px;
    cursor: pointer;
}

.scroll-y-auto {
    overflow-y: auto;
    height: 90%;
}

.position-fixed {
    position: fixed;
    width: 65%;
}

.mt-4 {
    margin-top: 4em;
}

select[name="version"] {
    width: 120px;
}

.mt-10px {
	margin-top: 10px;
}

.mb-20px {
	margin-bottom: 20px;
}

.diff-tl {
    font-size: 10px;
}

.cursor-pointer {
    cursor: pointer !important;
}

.diff-copy {
    cursor: pointer;
    fill: #3f4d5a;
    padding: 10px;
    position: absolute;
    right: 0;
    top: 0;
}

.target {
    border-bottom: 1px solid rgba(51, 64, 77, 0.1) !important;
    overflow-wrap: anywhere;
    padding-right: 26px !important;
    width: 50%;
}

.source {
    border-bottom: 1px solid rgba(51, 64, 77, 0.1) !important;
    border-right: 1px solid rgba(51, 64, 77, 0.1);
    overflow-wrap: anywhere;
    padding-right: 26px !important;
    width: 50%;
}

td.source{
    vertical-align: top;
}

td.target{
    vertical-align: top;
}

.diffTable {
    width: 100%;
}

.diff-box{
    box-shadow: 0 0 0 1px #cdd8e4, 0 2px 12px rgba(205, 216, 228, 0.5);
    border-radius: 5px;
}

.diff-meta{
    padding: 24px 0 12px
}

.bg-none {
    background: none !important;
    cursor: pointer !important;
}

.non-editable {
    cursor: not-allowed !important;
}

.processing {
    background-color: #ced8e5 !important;
}

.preview {
    margin: 0px !important;
    background-color: #f3f7fc !important;
}

.text-link {
    color: var(--link-color);
    cursor: pointer;
}

.text-link:hover {
    text-decoration: underline;
}

.mr--10 {
    margin-right: -10px;
}

.bg-white {
    background: white;
}

.inline-flex {
    display: inline-flex;
}

.align-center {
    align-items: center;
}

.display-none {
    display: none;
}

.source-change-icon {
    color: #FFBF00 !important;
    font-size: 16px;
}

.unset-width.fixed {
	min-width: 404px !important;
}

.border-left-radius-5px {
    border-top-left-radius: 5px !important;
    border-bottom-left-radius: 5px !important;
}

.status-getting-quote {
    background-color: #FFCCCC;
    border: none;
}

.status-needs-approval {
    background-color: #EF8686;
    border: none;
}

.activity-log .bullets {
    padding-inline-start: var(--padding);
}

.meta .field .heading {
    border-inline-end: none;
}

#settings, #meta-details {
    padding-right: 2.5rem;
}

#settings .input.ltr:not(.value) {
    display: block;
}

#settings .field.button {
    align-items: center;
    justify-content: space-between;
}

#meta-details .value {
    display: flex;
    align-items: center;
}

